# agent-ui-render

./: .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md  dist-workspace.toml  mise.toml
.github/: dependabot.yml
crates/agent-ui-render-cli/: Cargo.toml
crates/agent-ui-render-cli/src/: cli.rs  error.rs  file_io.rs  main.rs  output.rs
crates/agent-ui-render-cli/src/commands/: mod.rs
crates/agent-ui-render-cli/tests/: e2e.rs
crates/agent-ui-render-core/: Cargo.toml
crates/agent-ui-render-core/src/: diagnostic.rs  lib.rs  options.rs
crates/agent-ui-render-core/src/chart/: mod.rs
crates/agent-ui-render-core/src/domain/: report.rs
crates/agent-ui-render-core/src/markdown/: mod.rs
crates/agent-ui-render-core/src/normalize/: mod.rs
crates/agent-ui-render-core/src/render/: assets.rs  formatting.rs  mod.rs  static_charts.rs  static_html.rs
crates/agent-ui-render-core/src/spec/: mod.rs
crates/agent-ui-render-core/src/validate/: compact.rs  mod.rs  normalized.rs  shared.rs  unsafe_content.rs
crates/agent-ui-render-core/src/validate/compact/: content.rs  datasets.rs  views.rs
crates/agent-ui-render-core/src/validate/normalized/: content.rs  datasets.rs  views.rs
crates/agent-ui-render-core/src/wire/: compact.rs  mod.rs  v2.rs
crates/agent-ui-render-core/src/wire/compact/: codes.rs  content.rs  datasets.rs  mod.rs  views.rs
crates/agent-ui-render-core/src/wire/v2/: helpers.rs  layout.rs  options.rs  spec_options.rs
crates/agent-ui-render-core/src/wire/v2/charts/: marks.rs  mod.rs  statistical.rs  temporal.rs
crates/agent-ui-render-core/tests/: core.rs
crates/agent-ui-render-core/tests/core/: charts.rs  compact.rs  rendering.rs  schemas.rs  validation.rs
docs/: agent-reference.md  architecture.md  charts-v2.md  cli-reference.md  compatibility.md  components.md  development.md  release.md  renderer-development.md  security-model.md  troubleshooting.md  usage.md
examples/: comparison-report.input.json  component-showcase-minimal.input.json  component-showcase.input.json  revenue-overview.input.json  risk-summary.input.json  v2-chart-showcase.input.json
fixtures/: markdown-security.json
renderer-vue/: package.json  tsconfig.json  vite.config.ts  vitest.config.ts
schemas/: config.schema.json
scripts/: check-cli-docs.sh  check-doc-examples.sh  check-performance-budgets.ts  (+6 more)
(+56 files in other folders)
