[workspace]
members = [
    "crates/agent-ui-render-cli",
    "crates/agent-ui-render-core",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/NeoHsu/agent-ui-render"
homepage = "https://github.com/NeoHsu/agent-ui-render"
rust-version = "1.91"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
language-tags = "0.3.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
thiserror = "2"
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = "z"

[profile.dist]
inherits = "release"
lto = "thin"
