[package]
name = "agent-ui-render"
version = "0.5.0"
description = "Zero-install Agent UI renderer CLI with a Rust core and embedded Vue renderer"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[[bin]]
name = "agent-ui-render"
path = "src/main.rs"

[dependencies]
agent-ui-render-core = { path = "../agent-ui-render-core" }
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
