[package]
name = "agent-ui-render-core"
version = "0.5.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
language-tags.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
jsonschema = { version = "0.47.0", default-features = false }
proptest = "1"
